action("bin2c") {
  visibility = [":*"]
  script = "tools/bin2c.py"
  sources = [
    "lib/internal/ivan.js",
    "lib/console.js",
    "lib/util.js",
    "lib/internal/loader/Loader.js",
    "lib/internal/argparse.js",
    "lib/internal/fs.js",
  ]
  outputs = ["$target_gen_dir/ivan_blobs.cc"]
}

executable("ivan") {
  deps = [
    "deps/v8:v8_monolithic"
  ]
  sources = [
    "src/ivan.cc",
    "src/ivan_io.cc",
    "src/ivan_util.cc",
  ]
}
